add music/playlist/album/dj/djmusic  send comment and like/floors/reply/unlike/delete comment

--- a/src/main/resources/assets/cloudmusic/lang/zh_cn.json
+++ b/src/main/resources/assets/cloudmusic/lang/zh_cn.json
@@ -7,6 +7,7 @@
     "cloudmusic.help.music.similar.playlist": "获取歌曲相似歌单 /cloudmusic music similar playlist [id]",
     "cloudmusic.help.music.comment": "获取歌曲评论 /cloudmusic music comment [id]",
     "cloudmusic.help.music.hot.comment": "获取歌曲热评 /cloudmusic music hotComment [id]",
+    "cloudmusic.help.music.send.comment": "向歌曲发送评论 /cloudmusic music send comment [threadId] [content]",
     "cloudmusic.help.playlist": "获取歌单 /cloudmusic playlist [id]",
     "cloudmusic.help.playlist.play": "播放歌单 /cloudmusic music playlist [id]",
     "cloudmusic.help.playlist.subscribe": "收藏歌单 /cloudmusic playlist subscribe [id]",
@@ -15,6 +16,7 @@
     "cloudmusic.help.playlist.del": "歌单删除歌曲 /cloudmusic playlist del [id] [歌曲 id]",
     "cloudmusic.help.playlist.comment": "获取歌单评论 /cloudmusic playlist comment [id]",
     "cloudmusic.help.playlist.hot.comment": "获取歌单热评 /cloudmusic playlist hotComment [id]",
+    "cloudmusic.help.playlist.send.comment": "向歌单发送评论 /cloudmusic playlist send comment [threadId] [content]",
     "cloudmusic.help.artist": "获取歌手 /cloudmusic artist [id]",
     "cloudmusic.help.artist.top": "播放歌手热门 50 首 /cloudmusic artist top [id]",
     "cloudmusic.help.artist.album": "查看歌手所有专辑 /cloudmusic artist album [id]",
@@ -27,12 +29,15 @@
     "cloudmusic.help.album.unsubscribe": "取消收藏专辑 /cloudmusic album unsubscribe [id]",
     "cloudmusic.help.album.comment": "获取专辑评论 /cloudmusic album comment [id]",
     "cloudmusic.help.album.hot.comment": "获取专辑热评 /cloudmusic album hotComment [id]",
+    "cloudmusic.help.album.send.comment": "向专辑发送评论 /cloudmusic album send comment [threadId] [content]",
     "cloudmusic.help.dj": "获取电台 /cloudmusic dj [id]",
     "cloudmusic.help.dj.play": "播放电台 /cloudmusic dj play [id]",
+    "cloudmusic.help.dj.send.comment": "向电台发送评论 /cloudmusic dj send comment [threadId] [content]",
     "cloudmusic.help.dj.music": "获取电台节目 /cloudmusic dj music [id]",
     "cloudmusic.help.dj.music.play": "播放电台节目 /cloudmusic dj music play [id]",
     "cloudmusic.help.dj.music.comment": "获取电台节目评论 /cloudmusic dj music comment [id]",
     "cloudmusic.help.dj.music.hot.comment": "获取电台节目热评 /cloudmusic dj hotComment [id]",
+    "cloudmusic.help.dj.send.comment": "向电台节目发送评论 /cloudmusic dj music send comment [threadId] [content]",
     "cloudmusic.help.dj.subscribe": "收藏电台 /cloudmusic dj subscribe [id]",
     "cloudmusic.help.dj.unsubscribe": "取消收藏电台 /cloudmusic dj unsubscribe [id]",
     "cloudmusic.help.dj.comment": "获取电台评论 /cloudmusic dj comment [id]",
@@ -195,9 +200,12 @@
     "cloudmusic.info.page.dj.radio.comments": "电台 %s 的评论",
     "cloudmusic.info.page.dj.radio.hot.comments": "电台 %s 的热论",
     "cloudmusic.info.page.dj.music.comments": "电台节目 %s 的评论",
-    "cloudmusic.info.page.dj.music.hot.comments": "电台节目 %s 的热论",
+    "cloudmusic.info.page.dj.music.hot.comments": "评论的子评论",
+    "cloudmusic.info.page.comment.floors": "电台节目 %s 的热论",
     "cloudmusic.page.item.comments.like": "点赞数: %s",
-    "cloudmusic.info.comment.be.replied": "§b回复 %s - %s§r§7: %s",
+    "cloudmusic.info.comment.be.replied": "§b回复 §b%s - %s§r§7: %s",
+    "cloudmusic.info.comment.user.show": "点击查看发送评论用户",
+    "cloudmusic.info.comment.time": "发送时间: %s",
     "cloudmusic.info.page.comment.null": "该评论已删除",
     "cloudmusic.info.page.comment.err.null": "该评论涉及违规内容，经举报已被屏蔽",
     "cloudmusic.info.page.help": "CloudMusic 帮助",
@@ -230,6 +238,11 @@
     "cloudmusic.info.command.music.play": "播放 %s",
     "cloudmusic.info.command.trash": "将 %s 扔进垃圾桶",
     "cloudmusic.info.command.style.not.children": "曲风 %s - %s 没有子曲风",
+    "cloudmusic.info.command.send.comment": "向资源 %s 发送了一条评论",
+    "cloudmusic.info.command.comment.like": "点赞了评论 %s",
+    "cloudmusic.info.command.comment.unlike": "取消点赞了评论 %s",
+    "cloudmusic.info.command.comment.delete": "删除了评论 %s",
+    "cloudmusic.info.command.comment.reply": "回复了评论 %s",
     "cloudmusic.info.command.login": "成功登录至 %s",
     "cloudmusic.info.command.login.send.captcha": "成功向手机号发送验证码...",
     "cloudmusic.info.command.country.code": "设置手机号国家码为 %s...",
@@ -282,6 +295,8 @@
     "cloudmusic.options.style.album.show": "点击查看该曲风的专辑",
     "cloudmusic.options.children.style": "[子曲风]",
     "cloudmusic.options.children.style.show": "点击查看曲风所有子类型",
+    "cloudmusic.options.send.comment": "[发送回复]",
+    "cloudmusic.options.send.comment.show": "点击并补充回复內容进行发送评论",
     "cloudmusic.options.hot.comment": "[热评]",
     "cloudmusic.options.hot.comment.show": "点击查看该资源热评",
     "cloudmusic.options.comment": "[评论]",
@@ -292,6 +307,8 @@
     "cloudmusic.options.comment.reply.show": "点击并补充回复內容进行回复评论",
     "cloudmusic.options.comment.like": "[点赞]",
     "cloudmusic.options.comment.like.show": "点击点赞评论",
+    "cloudmusic.options.comment.unlike": "[取消点赞]",
+    "cloudmusic.options.comment.unlike.show": "点击取消点赞评论",
     "cloudmusic.options.comment.delete": "[删除]",
     "cloudmusic.options.comment.delete.show": "点击删除评论",
     "cloudmusic.options.page.prev": "[上一页]",
@@ -317,6 +334,7 @@
     "cloudmusic.exception.http.download": "下载文件重试超出最大次数 %s 次, 错误: %s",
     "cloudmusic.exception.not.comments": "该资源目前没有评论...",
     "cloudmusic.exception.not.hot.comments": "该资源目前没有热评...",
+    "cloudmusic.exception.not.comment.floors": "该评论目前没有子评论...",
     "cloudmusic.play.quality.standard": "标准",
     "cloudmusic.play.quality.higher": "较高",
     "cloudmusic.play.quality.exhigh": "极高",
