--- a/src/main/resources/assets/cloudmusic/lang/zh_cn.json
+++ b/src/main/resources/assets/cloudmusic/lang/zh_cn.json
@@ -42,6 +42,12 @@
     "cloudmusic.help.dj.unsubscribe": "取消收藏电台 /cloudmusic dj unsubscribe [id]",
     "cloudmusic.help.dj.comment": "获取电台评论 /cloudmusic dj comment [id]",
     "cloudmusic.help.dj.hot.comment": "获取电台热评 /cloudmusic dj hotComment [id]",
+    "cloudmusic.help.comment": "查看评论 /cloudmusic comment [commentId] [threadId]",
+    "cloudmusic.help.comment.floors": "查看评论的子评论 /cloudmusic comment floors [commentId] [threadId]",
+    "cloudmusic.help.comment.like": "点赞评论 /cloudmusic comment like [commentId] [threadId]",
+    "cloudmusic.help.comment.unlike": "取消点赞评论 /cloudmusic comment unlike [commentId] [threadId]",
+    "cloudmusic.help.comment.delete": "删除评论 /cloudmusic comment delete [commentId] [threadId]",
+    "cloudmusic.help.comment.reply": "回复评论 /cloudmusic comment reply [commentId] [threadId] [content]",
     "cloudmusic.help.user": "获取用户 /cloudmusic user [id]",
     "cloudmusic.help.user.playlist": "获取用户歌单 /cloudmusic user playlist [id]",
     "cloudmusic.help.user.dj": "获取用户创建的所有电台 /cloudmusic user dj [id]",
