feat: add auto adjust volume when monsters nearby player

--- a/src/main/resources/assets/cloudmusic/lang/zh_cn.json
+++ b/src/main/resources/assets/cloudmusic/lang/zh_cn.json
@@ -470,5 +470,8 @@
     "cloudmusic.config.exit.game.stop.music": "标题界面停止播放音乐 | exit.game.stop.music",
     "cloudmusic.config.exit.game.stop.music.comment": "返回标题界面后停止播放音乐",
     "cloudmusic.config.stop.play.show.ui": "停止播放后隐藏歌曲信息 | stop.play.show.ui",
-    "cloudmusic.config.stop.play.show.ui.comment": "停止播放后隐藏歌曲信息, 继续播放后显示歌曲信息"
+    "cloudmusic.config.stop.play.show.ui.comment": "停止播放后隐藏歌曲信息, 继续播放后显示歌曲信息",
+    "cloudmusic.config.enable.nearby.monster.decrease.volume": "开启附近有敌对生物时减小音量 | enable.nearby.decrease.volume",
+    "cloudmusic.config.nearby.monster.decrease.volume.value": "附近有地对生物时减少的音量值 | nearby.decrease.sound.value",
+    "cloudmusic.config.nearby.monster.decrease.volume.radius": "敌对生物检测半径 | nearby.decrease.sound.radiu"
 }
