--- a/src/main/resources/assets/cloudmusic/lang/zh_cn.json
+++ b/src/main/resources/assets/cloudmusic/lang/zh_cn.json
@@ -172,6 +172,9 @@
     "cloudmusic.info.page.user.playlist": "%s 所有的歌单",
     "cloudmusic.info.page.user.dj": "%s 创建的所有电台",
     "cloudmusic.info.page.recommend.playlist": "%s 的每日推荐歌单",
+    "cloudmusic.info.page.recommend.history": "%s 的历史每日推荐歌曲记录",
+    "cloudmusic.info.page.history.songs.recent.show": "播放 %s 的每日推荐歌曲",
+    "cloudmusic.info.command.recommend.history.music": "播放 %s 的每日推荐歌曲",
     "cloudmusic.info.page.sublist.album": "%s 的所有专辑收藏",
     "cloudmusic.info.page.sublist.artist": "%s 的所有歌手收藏",
     "cloudmusic.info.page.sublist.dj": "%s 的所有电台收藏",
